fix: aligned text left

--- a/src/theme/ItaliaTheme/Blocks/_squaresImageTemplate.scss
+++ b/src/theme/ItaliaTheme/Blocks/_squaresImageTemplate.scss
@@ -19,10 +19,11 @@
     position: relative;
     display: flex;
     height: 195px;
+    flex-direction: row;
     align-items: flex-end;
+    justify-content: left;
     padding: 1.2rem;
     text-decoration: none;
-    flex-direction: row;
 
     .title {
       z-index: 2;
